feat: introduce eventual consistency support in book-related Gherkin tests